--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.3
 streamlit==1.27.2
-tensorflow==2.13.0
+tensorflow
 keras-preprocessing==1.1.2
 scikit-learn==1.3.0
 SpeechRecognition==3.8.1
